# 4ConstraintsTheory

./: .gitignore  .gitmodules  Compile  Notes  README.md
3DModels-HandCrafted/: lego_obj1.mtl  lego_tool1.blend  lego_tool1.blend1  (+3 more)
BasicDemo/: BasicExample.cpp  BasicExample.h  CMakeLists.txt  main_opengl_single_example.cpp
ComputationalModel/: CMakeLists.txt  ExhaustiveSearch  ExhaustiveSearch.cpp  ExhaustiveSearchGUI  ExhaustiveSearchGUI.cpp  ExhaustiveSimulation.cpp  ExhaustiveSimulation.h  ExtractSurfacePointsGUI  ExtractSurfacePointsGUI.cpp  PhysicsUtils.cpp  PhysicsUtils.h  Simulation.cpp  Simulation.h  Util.cpp  Util.h  VisualSearchGUI.cpp  VisualSimulation.cpp  VisualSimulation.h  extractSurfacePoints  extractSurfacePoints.cpp  surface.csv  surface_plot.m
ComputationalModel/CMakeModules/: FindGLEW.cmake  FindGLFW3.cmake  FindTinyXML.cmake
ComputationalModel/lib3ds/: tracks.c  types.h
ComputationalModel/rendering/: CameraListener.cpp  CameraListener.h  GraphicsEntity.cpp  GraphicsManager.cpp  GraphicsManager.h  GraphicsMesh.h  ListenerBase.cpp  ListenerBase.h  RayCastEntity.cpp  RayCastEntity.h
ComputationalModel/surfaces/: surface.csv  surface_obj1.csv  surface_plot.m  surface_plot.m~
ComputationalModel/tinyxml/lib/win32/: tinyxml.lib
ComputationalModel/vs_2015/ComputationalModel/: ComputationalModel.sln
ComputationalModel/vs_2015/ComputationalModel/Debug/: lib3ds.lib  obj51.3ds
ComputationalModel/vs_2015/ComputationalModel/ExhaustiveSearch/: ExhaustiveSearch.vcxproj  ExhaustiveSearch.vcxproj.filters
ComputationalModel/vs_2015/ComputationalModel/ExhaustiveSearch/Debug/: vc140.idb
ComputationalModel/vs_2015/ComputationalModel/ExhaustiveSearch/Debug/ExhaustiveSearch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ComputationalModel/vs_2015/ComputationalModel/ExhaustiveSearch/Release/: ExhaustiveSearch.vcxprojResolveAssemblyReference.cache
ComputationalModel/vs_2015/ComputationalModel/ExhaustiveSearch/Release/ExhaustiveSearch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ExhaustiveSearch.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ComputationalModel/vs_2015/ComputationalModel/ExhaustiveSearch/x64/Debug/: ExhaustiveSearch.vcxprojResolveAssemblyReference.cache
ComputationalModel/vs_2015/ComputationalModel/ExhaustiveSearch/x64/Debug/ExhaustiveSearch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ExhaustiveSearch.lastbuildstate  ExhaustiveSearch.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ComputationalModel/vs_2015/ComputationalModel/ExhaustiveSearchGUI/: ExhaustiveSearchGUI.vcxproj  ExhaustiveSearchGUI.vcxproj.filters
ComputationalModel/vs_2015/ComputationalModel/ExtractSurfacePointsGUI/: ExtractSurfacePointsGUI.vcxproj  ExtractSurfacePointsGUI.vcxproj.filters
ComputationalModel/vs_2015/ComputationalModel/Release/: ExhaustiveSearch.exp  ExhaustiveSearch.lib  lib3ds.exp  lib3ds.lib  obj52.3ds
ComputationalModel/vs_2015/ComputationalModel/VisualSearchGUI/: VisualSearchGUI.vcxproj  VisualSearchGUI.vcxproj.filters
ComputationalModel/vs_2015/ComputationalModel/alglib/: alglib.vcxproj  alglib.vcxproj.filters
ComputationalModel/vs_2015/ComputationalModel/glfw/lib/x64/: glfw3.lib
ComputationalModel/vs_2015/ComputationalModel/glfw/lib/x86/: glfw3.lib
ComputationalModel/vs_2015/ComputationalModel/lib3ds/: lib3ds.vcxproj  lib3ds.vcxproj.filters
ComputationalModel/vs_2015/ComputationalModel/lib3ds/Debug/: vc140.idb
ComputationalModel/vs_2015/ComputationalModel/lib3ds/Debug/lib3ds.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  lib3ds.lastbuildstate
ComputationalModel/vs_2015/ComputationalModel/lib3ds/Release/: lib3ds.vcxprojResolveAssemblyReference.cache
ComputationalModel/vs_2015/ComputationalModel/lib3ds/Release/lib3ds.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  lib3ds.lastbuildstate
ComputationalModel/vs_2015/ComputationalModel/rendering/: rendering.vcxproj  rendering.vcxproj.filters
ComputationalModel/vs_2015/ComputationalModel/tinyxml/lib/x64/: tinyxml.lib
ComputationalModel/vs_2015/ComputationalModel/x64/Debug/: ExhaustiveSearch.exp  ExhaustiveSearch.lib  lib3ds.lib
ComputationalModel/vs_2015/ComputationalModel/x64/Release/: ExhaustiveSearch.exp  ExhaustiveSearch.lib  lib3ds.lib
MatlabNewtonDynamics/: CMakeLists.txt
MatlabNewtonDynamics/OpenGLRender/Contents/Resources/: obj51.off
MatlabNewtonDynamics/OpenGLRender/sdkDemos/demos/: MeshCollision.cpp
MatlabNewtonDynamics/OpenGLRender/sdkDemos/toolBox/: CocoaOpenglGlue.mm  PhysicsUtils.cpp  dHighResolutionTimer.cpp  toolbox_stdafx.cpp  toolbox_stdafx.h
ModelExhaustiveSearch/: CMakeLists.txt  ConvexApproximation.cpp  DemoCamera.cpp  DemoCamera.h  DemoCameraListener.cpp  DemoCameraListener.h  DemoEntity.cpp  DemoEntity.h  DemoEntityManager.cpp  DemoEntityManager.h  DemoListenerBase.cpp  DemoListenerBase.h  DemoMesh.cpp  DemoMesh.h  ExhaustiveSearch  ExhaustiveSearchGUI  MatlabNewtonDynamics  PhysicsUtils.cpp  PhysicsUtils.h  Simulation.cpp  Simulation.h  Util.cpp  Util.h  main.cpp  mainGUI.cpp  results.csv  resultsGUI.csv
ModelExhaustiveSearch/DEMO/: CMakeLists.txt
ModelExhaustiveSearch/DEMO/Contents/Resources/: obj52.off
ModelExhaustiveSearch/DEMO/sdkDemos/: DemoEntityManager.cpp  NewtonDemos.cpp
ModelExhaustiveSearch/DEMO/sdkDemos/demos/: ConvexApproximation.cpp
ModelExhaustiveSearch/DEMO/sdkDemos/toolBox/: PhysicsUtils.h
ModelExhaustiveSearch/rendering/: Camera.cpp  Camera.h  CameraListener.cpp  CameraListener.h  DebugDisplay.cpp  GraphicsEntity.cpp  GraphicsEntity.h  GraphicsManager.cpp  GraphicsManager.h  GraphicsMesh.cpp  GraphicsMesh.h  ListenerBase.cpp  PhysicsUtils.cpp  PhysicsUtils.h  Util.cpp  Util.h
ModelExhaustiveSearch/toolBox/: DebugDisplay.cpp  DebugDisplay.h  PhysicsUtils.cpp  PhysicsUtils.h  dHighResolutionTimer.cpp  dHighResolutionTimer.h
(+164 files in other folders)
